--- a/src/main/resources/SQL.ini
+++ b/src/main/resources/SQL.ini
@@ -9,12 +9,26 @@ CREATE_ORDER_TABLE = create table if not exists SHOP."ORDER" (ID integer auto_in
 
 [Client operations]
 ADD_NEW_CLIENT = insert into SHOP.CLIENT(NAME, SURNAME, AGE, PHONE_NUM, EMAIL) values (?, ?, ?, ?, ?);
-GET_CLIENT = select ID, NAME, SURNAME, AGE, PHONE_NUM, EMAIL from SHOP.CLIENT where ID =
+GET_CLIENT = select ID, NAME, SURNAME, AGE, PHONE_NUM, EMAIL from SHOP.CLIENT where ID = ?;
 CLIENTS_LIST = select * from SHOP.CLIENT;
 UPDATE_CLIENT = update SHOP.CLIENT set NAME = ?, SURNAME = ?, AGE = ?, PHONE_NUM = ?, EMAIL = ? where ID = ?;
+DELETE_CLIENT = delete from SHOP.CLIENT where ID = ?;
 
 [Product operation]
-GET_PRODUCT = select ID, PRODUCT_NAME, DESCRIPTION, PRICE from SHOP.PRODUCT where ID =
+ADD_NEW_PRODUCT = insert into SHOP.PRODUCT(PRODUCT_NAME, DESCRIPTION, PRICE) values (?, ?, ?);
+GET_PRODUCT = select ID, PRODUCT_NAME, DESCRIPTION, PRICE from SHOP.PRODUCT where ID = ?;
+PRODUCT_LIST = select * from SHOP.PRODUCT;
+UPDATE_PRODUCT = update SHOP.PRODUCT set PRODUCT_NAME = ?, DESCRIPTION = ?, PRICE = ? where ID = ?;
+DELETE_PRODUCT = delete from SHOP.PRODUCT where ID = ?;
 
-[Product container]
-PRODUCT_CONTAINER_LIST = select t2.ID, t2.PRODUCT_ID, t1.PRODUCT_NAME, t1.DESCRIPTION, t1.PRICE from SHOP.PRODUCT as t1 join SHOP.PRODUCT_CONTAINER as t2 on t1.ID = t2.PRODUCT_ID where t2.REF_ID = '
+[Product container operation]
+ADD_PRODUCT_CONTAINER = insert into SHOP.PRODUCT_CONTAINER (REF_ID, PRODUCT_ID) values(?, ?);
+GET_PRODUCT_CONTAINER_ITEM = select t1.ID, t2.ID, t2.PRODUCT_NAME, t2.DESCRIPTION, t2.PRICE from SHOP.PRODUCT_CONTAINER as t1 join SHOP.PRODUCT as t2 on t2.ID = t1.PRODUCT_ID and REF_ID = ? and t1.ID = ?;
+PRODUCT_CONTAINER_LIST = select t2.ID, t2.PRODUCT_ID, t1.PRODUCT_NAME, t1.DESCRIPTION, t1.PRICE from SHOP.PRODUCT as t1 join SHOP.PRODUCT_CONTAINER as t2 on t1.ID = t2.PRODUCT_ID where t2.REF_ID = ?;
+DELETE_PRODUCT_CONTAINER_ITEM = delete from SHOP.PRODUCT_CONTAINER where REF_ID = ? and ID = ?;
+
+[Order operation]
+ADD_NEW_ORDER = insert into SHOP."ORDER" (CLIENT_ID, REF_PRODUCT_CONTAINER, AMOUNT) VALUES (?, ?, ?);
+SHOW_ORDER = select t2.ID, t2.NAME, t2.SURNAME, t2.AGE, t2.PHONE_NUM, t2.EMAIL, t4.ID, t4.PRODUCT_NAME, t4.DESCRIPTION, t4.PRICE, t1.AMOUNT from SHOP."ORDER" as t1 join SHOP.CLIENT as t2 on t1.CLIENT_ID = t2.ID join SHOP.PRODUCT_CONTAINER as t3 on t1.REF_PRODUCT_CONTAINER = t3.REF_ID join SHOP.PRODUCT as t4 on t3.PRODUCT_ID = t4.ID where t3.REF_ID = ?;
+SHOW_ALL_ORDERS = select t1.ID, t3.REF_ID, t1.AMOUNT, t2.NAME, t2.SURNAME, t2.AGE, t2.PHONE_NUM, t2.EMAIL, t4.PRODUCT_NAME, t4.DESCRIPTION, t4.PRICE from SHOP."ORDER" as t1 join SHOP.CLIENT  as t2 on t2.ID = t1.CLIENT_ID join SHOP.PRODUCT_CONTAINER as t3 on t3.REF_ID = t1.REF_PRODUCT_CONTAINER join SHOP.PRODUCT as t4 on t4.ID = t3.PRODUCT_ID order by t1.ID;
+DELETE_ORDER = delete from SHOP."ORDER" where ID = ?;
