--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.2.Final</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
